--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "birthday",
   "version": "1.0.0",
-  "description": "Birthday greetings..",
+  "description": "Feliz CUM Andresito..",
   "main": " ",
   "scripts": {
     "server-node": "http-server -p 8081"
@@ -13,7 +13,7 @@
   "keywords": [
     "Birthday"
   ],
-  "author": "Ayush Sharma",
+  "author": "Pandita",
   "license": "WTFPL",
   "bugs": {
     "url": "https://github.com/ayusharma/birthday/issues"
